# immich-python-scripts

./: .env.example  LICENSE  README.md  hello.py  pyproject.toml
src/: app.css  app.py
src/immich_python_scripts/: config.py
src/immich_python_scripts/api/: __init__.py  model.py  queries.py
src/immich_python_scripts/duplicates/: __init__.py  automated.py  common.py  run.py  step_by_step.py  video_dedup.py  widget.py
src/immich_python_scripts/favorites/: __init__.py
tests/: test_dedup_videos.py  test_favorites.py  test_queries.py
