[project]
name = "immich-python-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "pydantic-settings>=2.7.1",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "textual-image>=0.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["datamodel-code-generator[http]>=0.26.5", "pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
immich_scripts = "app:main"
